<resources>
    <string name="app_name">To-Do List</string>
    <string name="task_title_hint">Enter a title for the task.</string>
    <string name="task_title_label">Title</string>
    <string name="task_details_label">Details</string>
    <string name="task_solved_label">Complete</string>
    <string name="new_task">New Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="toggle_theme">Dark Mode / Light Mode</string>
    <string name="no_tasks">There are no new tasks!</string>
    <string name="priority_label">Priority</string>
    <string name="category_label">Category</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="no_results_found">No tasks found!</string>
    <string name="description_label">Task Description</string>
    <string name="task_description_hint">Enter task description (under 300 words)...</string>
</resources>
